Edited css for footer and dark mode button (still has a couple issues)

--- a/static/stylesheets/layout.css
+++ b/static/stylesheets/layout.css
@@ -12,12 +12,14 @@
   text-align: center;
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-evenly;
  }
  #footer-text{
   font-family: Raleway;
-  width:500px;
-  text-align: center;
+  width:450px;
+  text-align: left;
+  color: #E0E0E0;
+  align-self: center;
  }
  #footer-button{
   font-family: Lato;
@@ -29,4 +31,6 @@
   padding-left: 40px;
   padding-right: 40px;
   text-align: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
  }
